@@ -1,6 +1,13 @@
 2004-05-16  David Ayers  <d.ayers@inode.at>
 
 	* GSWeb.framework/GNUmakefile: Make GSWDefines.h a public header.
+
+	* GSWeb.framework/GSWAction.m,
+	* GSWeb.framework/GSWApplication.m,
+	* GSWeb.framework/GSWDirectAction.m,
+	* GSWeb.framework/GSWSession.m,
+	* GSWeb.framework/GSWTemplateParser.m: Do not initialize va_list
+	with NULL.
 	
 2004-05-14   Manuel Guesdon <mguesdon@orange-concept.com>
 
